FIX: for buttons arrow changed z-index

--- a/src/styles/components/_buttons.scss
+++ b/src/styles/components/_buttons.scss
@@ -790,7 +790,7 @@ button,
   background: none;
   padding: 0;
   border: none;
-  z-index: 99;
+  z-index: 40;
 
   &_prev {
 
